--- a/style.css
+++ b/style.css
@@ -8,7 +8,15 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 400;
+    line-height: 1.5;
+}
+li {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
+    color: #000;
 }
 .container {
     max-width: 1440px;
@@ -31,6 +39,7 @@ body {
     position: relative;
     padding: 0 12px;
     text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     color: #fff;
 }
@@ -40,7 +49,7 @@ body {
     left: 12px;
     bottom: -5px;
     width: calc(100% - 24px);
-    height: 2px;
+    height: 1px;
     background-color: #fff;
 }
 .main {
@@ -48,16 +57,91 @@ body {
 }
 .wrapper {
     display: flex;
+    justify-content: space-between;
 }
-img {
-    width: 250px;
-    height: 250px;
+.block-left {
+    padding: 50px 50px;
+    width: 40%;
+}
+.foto {
+    display: block;
+    margin: 0 auto;
+    width: 450px;
+    height: 450px;
     border-radius: 100%;
-    border: 10px solid rgb(235, 226, 228);
+    border: 5px solid rgb(235, 226, 228);
 }
-.block-right {
-    background-color: rgb(235, 226, 228);
+.title {
+    margin-top: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 41px;
+    letter-spacing: 5px;
+}
+.profile-title {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 3px;
 }
 .section-title {
+    margin: 60px 0 40px 0;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 25px;
+    letter-spacing: 3px;
+    border-bottom: 1px solid #000;
+}
+.contacts-list {
+    position: relative;
+}
+.contacts-item::before {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    width: 20px;
+    height: 20px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.contacts-item:nth-child(1)::before {
+    background-image: url(assets/img/contacts/phone.png);
+}
+.contacts-item:nth-child(2)::before {
+    top: 30px;
+    background-image: url(assets/img/contacts/discord.png);
+}
+.contacts-item:nth-child(3)::before {
+    top: 57px;
+    background-image: url(assets/img/contacts/email.png);
+}
+.contacts-item:nth-child(4)::before {
+    width: 18px;
+    height: 18px;
+    top: 87px;
+    background-image: url(assets/img/contacts/github.png);
+}
+.contacts-item:nth-child(5)::before {
+    width: 18px;
+    height: 18px;
+    top: 114px;
+    background-image: url(assets/img/contacts/location.png);
+}
+.contacts-item a {
+    color: rgb(212, 158, 163);
+}
+.contacts-item a:hover {
+    color: #000;
+}
+.block-right {
+    padding: 30px 50px;
+    width: 60%;
+    background-color: rgb(235, 226, 228);
+}
+
+.projects-img {
+    width: 300px;
+    height: 200px;
 }
