--- a/style.css
+++ b/style.css
@@ -52,9 +52,6 @@ a {
     height: 1px;
     background-color: #fff;
 }
-.main {
-    height: 900px;
-}
 .wrapper {
     display: flex;
     justify-content: space-between;
@@ -140,8 +137,104 @@ a {
     width: 60%;
     background-color: rgb(235, 226, 228);
 }
-
+.education-text span {
+    font-weight: 700;
+}
+.courses-list {
+    position: relative;
+}
+.courses-item::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 8px;
+    width: 20px;
+    height: 20px;
+    background-image: url(assets/img/contacts/arrow.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.courses-item:nth-child(2)::before {
+    top: 30px;
+}
+.courses-item:nth-child(3)::before {
+    top: 57px;
+}
+.courses-item span {
+    font-weight: 700;
+}
+.skills-list {
+    position: relative;
+}
+.skills-item::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 8px;
+    width: 20px;
+    height: 20px;
+    background-image: url(assets/img/contacts/arrow.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.skills-item:nth-child(2)::before {
+    top: 30px;
+}
+.skills-item:nth-child(3)::before {
+    top: 57px;
+}
+.skills-item:nth-child(4)::before {
+    top: 84px;
+}
+.skills-item:nth-child(5)::before {
+    top: 111px;
+}
+.skills-item:nth-child(6)::before {
+    top: 138px;
+}
+.skills-item:nth-child(7)::before {
+    top: 165px;
+}
+.skills-item:nth-child(8)::before {
+    top: 192px;
+}
+.skills-item:nth-child(9)::before {
+    top: 219px;
+}
+.projects-block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.projects-item {
+    margin-bottom: 20px;
+}
 .projects-img {
     width: 300px;
     height: 200px;
+}
+pre {
+    padding-left: 20px;
+    font-family: monospace;
+    background-color: #f5f5f5;
+}
+.languages-list {
+    position: relative;
+}
+.languages-item span {
+    font-weight: 700;
+}
+.languages-item::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 8px;
+    width: 20px;
+    height: 20px;
+    background-image: url(assets/img/contacts/arrow.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.languages-item:nth-child(2)::before {
+    top: 31px;
 }
