--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ html {
     scroll-behavior: smooth; 
 }
 body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 400;
