--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
+    background-color: #f5f5f5;
 }
 li {
     list-style-type: none;
@@ -24,12 +25,13 @@ a {
 .container {
     max-width: 1440px;
     margin: 0 auto;
+    box-shadow: 10px 10px 40px -1px rgb(0 0 0 / 23%);
 }
 .header {
     height: 70px;
 }
 .nav {
-    background-color: rgb(212, 158, 163);
+    background-color: rgb(235, 226, 228);
 }
 .nav-list {
     height: 70px;
@@ -44,7 +46,7 @@ a {
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
-    color: #fff;
+    color: #000;
 }
 .nav-link:hover::after {
     content: "";
@@ -53,15 +55,16 @@ a {
     bottom: -5px;
     width: calc(100% - 24px);
     height: 1px;
-    background-color: #fff;
+    background-color: #000;
 }
-.wrapper {
+main {
     display: flex;
     justify-content: space-between;
 }
 .block-left {
     padding: 50px 50px;
     width: 40%;
+    background-color: #fff;
 }
 .foto {
     display: block;
@@ -240,4 +243,39 @@ pre {
 }
 .languages-item:nth-child(2)::before {
     top: 31px;
+}
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px;
+    height: 80px;
+    font-family: 'Montserrat', sans-serif;;
+    background-color: rgb(140, 140, 145);
+    color: #fff;
+}
+.githab-link {
+    color: #fff;
+    position: relative;
+}
+.githab-link:hover::after {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+}
+.github {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.github-icon {
+    margin-right: 10px;
+    width: 25px;
+}
+.logo {
+    width: 90px;
 }
