--- a/style.css
+++ b/style.css
@@ -112,6 +112,9 @@ main {
 .contacts-item:nth-child(1)::before {
     background-image: url(assets/img/contacts/phone.png);
 }
+.contacts-item:nth-child(1):hover:before, .contacts-item:nth-child(2):hover:before, .contacts-item:nth-child(3):hover:before, .contacts-item:nth-child(4):hover:before, .contacts-item:nth-child(5):hover:before {
+    filter: invert(77%) sepia(9%) saturate(1213%) hue-rotate(306deg) brightness(90%) contrast(82%);
+}
 .contacts-item:nth-child(2)::before {
     top: 30px;
     background-image: url(assets/img/contacts/discord.png);
@@ -215,9 +218,15 @@ main {
 .projects-item {
     margin-bottom: 20px;
 }
+
 .projects-img {
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 220px;
+    border-radius: 5px;
+    transition: all 0.5s;
+}
+.projects-img:hover {
+    transform: scale(1.1);
 }
 pre {
     padding-left: 20px;
@@ -255,22 +264,18 @@ footer {
     color: #fff;
 }
 .githab-link {
-    color: #fff;
     position: relative;
-}
-.githab-link:hover::after {
-    content: "";
-    position: absolute;
-    top: 30px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
+    color: #fff;
+    transition: all 0.5s;
 }
 .github {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.5s;
+}
+.github:hover{
+    transform: scale(1.2);
 }
 .github-icon {
     margin-right: 10px;
@@ -278,6 +283,10 @@ footer {
 }
 .logo {
     width: 90px;
+    transition: all 0.5s;
+}
+.logo:hover {
+    transform: scale(1.2);
 }
 @media (max-width: 1400px) {
     .foto {
